[project]
name = "agents"
version = "0.1.0"
description = "Buidling AI Agents"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "fastapi[standard]>=0.128.0",
    "pydantic>=2.12.5",
    "pydantic-settings>=2.12.0",
    "tortoise-orm[asyncpg]>=0.25.3",
]

[dependency-groups]
dev = [
    "ipython>=9.9.0",
]
